clicking on decoration on mobile no longer shows a black box around the element

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -108,6 +108,8 @@ body {
     .candy,
     .snow {
         display: none;
+        outline: none;
+        -webkit-tap-highlight-color: transparent;
     }
 }
 @media (max-height: 768px) {
